# sun-class-app

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 01_init_db.sql
src/: db.rs  dto.rs  main.rs  models.rs  routes.rs
src/handlers/: auth.rs  classroom.rs  mod.rs  user.rs
src/middlewares/: jwt.rs
sun-class-svelte/: package-lock.json  package.json
sun-class-svelte/src/: app.css  hooks.server.ts
sun-class-svelte/src/lib/: types.ts  utils.ts
sun-class-svelte/src/lib/api/: auth.ts  classrooms.ts  types.ts  user.ts
sun-class-svelte/src/lib/stores/: modalState.ts  state.svelte.ts
sun-class-svelte/src/routes/: +layout.svelte
sun-class-svelte/src/routes/(auth-required)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Modal.svelte  Navbar.svelte  NewClassModal.svelte
sun-class-svelte/src/routes/(auth-required)/archive/: +page.svelte
sun-class-svelte/src/routes/(auth-required)/assignments/: +page.svelte
sun-class-svelte/src/routes/(auth-required)/class/[class_id]/: +page.server.ts  +page.svelte
sun-class-svelte/src/routes/(auth-required)/class/[class_id]/assignment/[assignment_id]/: +page.server.ts  +page.svelte
sun-class-svelte/src/routes/(auth-required)/class/[class_id]/submissions/: +page.server.ts  +page.svelte
sun-class-svelte/src/routes/(auth-required)/grades/: +page.svelte
sun-class-svelte/src/routes/(auth-required)/profile/: +page.server.ts  +page.svelte
sun-class-svelte/src/routes/(default)/login/: +page.svelte
(+2 files in other folders)
