[package]
name = "sun-class"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.3", features = ["multipart"]}
axum-extra = {version = "0.10.1", features = ["typed-header"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tower-cookies = "0.11.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"